[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Background/@read_book_poster_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Posters/ReadBookPoster.gd" type="Script" id=2]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Body_Over"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.101961, 0.101961, 0.101961, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="ReadBookPoster" type="Area2D"]
collision_layer = 16
collision_mask = 8
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 0.396851, 0.924033 )
scale = Vector2( 0.06, 0.0614571 )
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 25.3776, 56.1179, 36.7297, 44.1351, 36.348, -55.0055, -36.0508, -55.5668, -37.2692, 56.1179 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Body_Over = SubResource( 1 )
anims/Idle = SubResource( 2 )

[node name="InstructionLabel" type="Label" parent="."]
margin_left = -55.7296
margin_top = -77.087
margin_right = 52.2704
margin_bottom = -60.087
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "<Enter to Inspect>"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_ReadBookPoster_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ReadBookPoster_body_exited"]
